Fixed issue where stopped line on breakpoint has background color that makes text almost invisible.

--- a/themes/pastels_on_dark.css
+++ b/themes/pastels_on_dark.css
@@ -1,5 +1,12 @@
 /* Pastels on Dark by Mats Persson, converted from TextMate theme (Pastels on Dark.tmTheme) */
 
+/* 
+CHANGELOG
+
+1) 2010-06-18 cbalz Fixed issue where stopped line on breakpoint has background color that makes text almost invisible. 
+
+*/
+
 .panelNode-script {
     font-size: 11px;
     background-color: #211E1E;
@@ -83,3 +90,7 @@
 .css-colorcode {
     color: #E1C96B;
 }
+
+.sourceRow[exe_line="true"] {  
+    outline: 1px solid #D9D9B6; margin-right: 1px; background-color: purple; 
+} 
